crates/cubecl-core/tests/error/array_variable.rs
use cubecl_core as cubecl;
use cubecl::prelude::*;

#[cube]
fn range(x: UInt, y: UInt) {
    let _array = [x, y];
}

fn main() {}
