crates/cubecl-core/tests/error/array_variable.stderr
error: Only arrays of literals are supported
 --> tests/error/array_variable.rs:6:18
  |
6 |     let _array = [x, y];
  |                  ^^^^^^
